# slopscore

./: .gitignore  README.md  RESEARCH.md  __init__.py  helper.py  pipeline.py  prompt.md  pyproject.toml  research.py
benchmark/: 002 WHITE_SPACE – Pedro Silva.mid  prompt.txt
benchmark/claude-opus-4.6/: white-space-nocturne.abc  white-space-nocturne.mid  white-space-nocturne.musicxml
benchmark/gpt-5.5/: white-room-memory-ms.mid  white-room-memory.abc  white-room-memory.mid  white-room-memory.musicxml
book/: 00-music-theory-guardrails.md  01-functional-slot-grammar.md  02-canonical-score-patterns.md  03-instrument-map.md  04-abc-pattern-bank.md  05-llm-rules-and-metadata.md  06-vocal-and-lyrics.md  README.md
example/: README.md  index.html  wheatbreeze.mid  wheatbreeze.musicxml
example/claude-opus-4.6/: windmill.abc  windmill.mid
example/gemini-3.1-pro/: meadow.abc  meadow.mid  meadow.musicxml
example/gpt5.5/: wheatbreeze.abc  wheatbreeze.opus
music_llm_project/: __init__.py
tests/: test_research.py
workspace/outputs/abc/: .gitignore  README.md
workspace/outputs/audio/: README.md
workspace/outputs/midi/: README.md
workspace/outputs/musicxml/: README.md
workspace/outputs/spectrograms/: README.md
workspace/runs/: README.md
